--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,9 @@
+# 0x06. AirBnB clone - Web dynamic
 # This file lists all individuals having contributed content to the repository.
 
 
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Joann Vuong <130@holbertonschool.com>
+hertheyhermee <tiamiyuhayzed@gmail.com>
+ConquerorCletus <>
