--- a/AUTHORS
+++ b/AUTHORS
@@ -6,4 +6,4 @@ Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com>
 hertheyhermee <tiamiyuhayzed@gmail.com>
-ConquerorCletus <>
+ConquerorCletus <Smartchibuike2019@gmail.com>
